--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ header{
 }
 
 h1 {
-	
+	font-family: Andrea Bilarosa;
 	color: wheat;
 	text-shadow: 2px 3px 5px #888888;
 	font-size: 2em;
@@ -34,8 +34,7 @@ h1 {
 	height: 250px;
 	transition: all 1.2s;
 }
-	
-}
+
 .containerx:hover{
 	transform: scale(1.2);
 }
